// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Block Class > should correctly calculate merkel tree 1`] = `
MerkleTree {
  "complete": false,
  "concatenator": [Function],
  "duplicateOdd": false,
  "fillDefaultHash": null,
  "hashFn": [Function],
  "hashLeaves": false,
  "isBitcoinTree": false,
  "layers": [
    [
      {
        "data": [
          222,
          14,
          82,
          244,
          135,
          70,
          50,
          59,
          76,
          5,
          97,
          32,
          194,
          130,
          89,
          198,
          25,
          170,
          81,
          237,
          84,
          54,
          89,
          183,
          92,
          243,
          219,
          70,
          20,
          197,
          118,
          86,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          248,
          27,
          250,
          236,
          34,
          224,
          204,
          168,
          5,
          80,
          146,
          71,
          184,
          157,
          169,
          196,
          124,
          214,
          110,
          44,
          106,
          73,
          82,
          47,
          123,
          174,
          156,
          153,
          7,
          218,
          2,
          102,
        ],
        "type": "Buffer",
      },
    ],
    [
      {
        "data": [
          133,
          159,
          129,
          77,
          146,
          115,
          124,
          132,
          91,
          90,
          77,
          156,
          84,
          138,
          36,
          157,
          239,
          149,
          10,
          187,
          30,
          11,
          119,
          81,
          150,
          13,
          144,
          16,
          26,
          33,
          87,
          223,
        ],
        "type": "Buffer",
      },
    ],
  ],
  "leaves": [
    {
      "data": [
        222,
        14,
        82,
        244,
        135,
        70,
        50,
        59,
        76,
        5,
        97,
        32,
        194,
        130,
        89,
        198,
        25,
        170,
        81,
        237,
        84,
        54,
        89,
        183,
        92,
        243,
        219,
        70,
        20,
        197,
        118,
        86,
      ],
      "type": "Buffer",
    },
    {
      "data": [
        248,
        27,
        250,
        236,
        34,
        224,
        204,
        168,
        5,
        80,
        146,
        71,
        184,
        157,
        169,
        196,
        124,
        214,
        110,
        44,
        106,
        73,
        82,
        47,
        123,
        174,
        156,
        153,
        7,
        218,
        2,
        102,
      ],
      "type": "Buffer",
    },
  ],
  "sort": false,
  "sortLeaves": false,
  "sortPairs": false,
}
`;

exports[`Block Class > should fail to match merkle tree of a corrupted block 1`] = `
MerkleTree {
  "complete": false,
  "concatenator": [Function],
  "duplicateOdd": false,
  "fillDefaultHash": null,
  "hashFn": [Function],
  "hashLeaves": false,
  "isBitcoinTree": false,
  "layers": [
    [
      {
        "data": [
          39,
          176,
          51,
          212,
          92,
          5,
          9,
          111,
          149,
          124,
          62,
          28,
          235,
          189,
          116,
          75,
          137,
          37,
          101,
          92,
          165,
          160,
          167,
          157,
          185,
          31,
          31,
          178,
          69,
          52,
          167,
          206,
        ],
        "type": "Buffer",
      },
      {
        "data": [
          248,
          27,
          250,
          236,
          34,
          224,
          204,
          168,
          5,
          80,
          146,
          71,
          184,
          157,
          169,
          196,
          124,
          214,
          110,
          44,
          106,
          73,
          82,
          47,
          123,
          174,
          156,
          153,
          7,
          218,
          2,
          102,
        ],
        "type": "Buffer",
      },
    ],
    [
      {
        "data": [
          162,
          162,
          8,
          8,
          115,
          35,
          104,
          29,
          83,
          119,
          38,
          161,
          112,
          5,
          245,
          127,
          14,
          203,
          113,
          49,
          16,
          73,
          124,
          135,
          19,
          162,
          212,
          168,
          209,
          173,
          100,
          6,
        ],
        "type": "Buffer",
      },
    ],
  ],
  "leaves": [
    {
      "data": [
        39,
        176,
        51,
        212,
        92,
        5,
        9,
        111,
        149,
        124,
        62,
        28,
        235,
        189,
        116,
        75,
        137,
        37,
        101,
        92,
        165,
        160,
        167,
        157,
        185,
        31,
        31,
        178,
        69,
        52,
        167,
        206,
      ],
      "type": "Buffer",
    },
    {
      "data": [
        248,
        27,
        250,
        236,
        34,
        224,
        204,
        168,
        5,
        80,
        146,
        71,
        184,
        157,
        169,
        196,
        124,
        214,
        110,
        44,
        106,
        73,
        82,
        47,
        123,
        174,
        156,
        153,
        7,
        218,
        2,
        102,
      ],
      "type": "Buffer",
    },
  ],
  "sort": false,
  "sortLeaves": false,
  "sortPairs": false,
}
`;
